docs(plugins/session) update versions

--- a/app/_hub/kong-inc/session/0.1-x.md
+++ b/app/_hub/kong-inc/session/0.1-x.md
@@ -1,7 +1,7 @@
 ---
 name: Session
 publisher: Kong Inc.
-version: 2.0.0-x
+version: 1.0-x
 
 desc: Support sessions for Kong Authentication Plugins.
 description: |
@@ -20,7 +20,12 @@ source_url: https://github.com/Kong/kong-plugin-session
 kong_version_compatibility:
   community_edition:
     compatible:
-      - 1.2.x
+      - 1.0.x
+      - 0.15.x
+
+  enterprise_edition:
+    compatible:
+      - 0.35-x
 
 params:
   name: session
