--- a/app/_hub/kong-inc/serverless-functions/0.1-x.md
+++ b/app/_hub/kong-inc/serverless-functions/0.1-x.md
@@ -74,17 +74,22 @@ different priority in the plugin chain.
 1. Create a file named `custom-auth.lua` with the following content:
 
     ```lua
-    -- Get list of request headers
-    local custom_auth = kong.request.get_header("x-custom-auth")
+    local blocked = 0
+    
+    return function()
+      -- Get list of request headers
+      local custom_auth = kong.request.get_header("x-custom-auth")
 
-    -- Terminate request early if our custom authentication header
-    -- does not exist
-    if not custom_auth then
-      return kong.response.exit(401\, "Invalid Credentials")
+      -- Terminate request early if our custom authentication header
+      -- does not exist
+      if not custom_auth then
+        blocked = blocked + 1
+        return kong.response.exit(401\, "Invalid Credentials")
+      end
+
+      -- Remove custom authentication header from request
+      kong.service.request.clear_header('x-custom-auth')
     end
-
-    -- Remove custom authentication header from request
-    kong.service.request.clear_header('x-custom-auth')
     ```
 
 4. Ensure the file contents:
@@ -135,6 +140,33 @@ in the access phase without ever redeploying / restarting Kong.
 ----
 
 ### Notes
+
+#### Upvalues
+
+Prior to version 0.3 of the plugin, the provided Lua code would run as the
+function. From version 0.3 onwards also a function can be returned, to allow
+for upvalues.
+
+So older version would do this (still works with 0.3 and above):
+
+```lua
+-- this entire block is executed on each request
+ngx.log(ngx.ERR, "hello world")
+```
+
+with newer version you can return a function to run on each request, allowing
+for upvalues to keep state in between requests:
+
+```lua
+-- this runs once when Kong starts
+local count = 0
+
+return function()
+  -- this runs on each request
+  count = count + 1
+  ngx.log(ngx.ERR, "hello world: ", count)
+end
+```
 
 #### Fake Upstreams
 
